[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-0721"
version = "0.0.1"
authors = [
  { name="ShintoKosei", email="shintokosei@qq.com" },
]
description = "A 0721 attendance nonebot2 plugin"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
  "Pillow",
  "nonebot2",
  "nonebot-adapter-onebot",
  "nonebot-plugin-alconna",
  "nonebot_plugin_userinfo"
]

[project.urls]
Homepage = "https://github.com/ShintoKosei/nonebot-plugin-0721"
Issues = "https://github.com/ShintoKosei/nonebot-plugin-0721/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
nonebot_plugin_deer_pipe = ["*.png", "*.jpg", "*.ttf"]
